[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/OptionsMenu.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/interface/Fonts/Manrope/static/Manrope-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.219608, 0.219608, 0.219608, 0.498039 )

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 435.0
margin_right = -773.0
rect_pivot_offset = Vector2( -753, 216 )
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Graphics" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Graphics"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/hseparation = 539
columns = 2

[node name="DisplayMode" type="Label" parent="TabContainer/Graphics/GridContainer"]
margin_top = 3.0
margin_right = 83.0
margin_bottom = 17.0
text = "DisplayMode"

[node name="OptionButton" type="OptionButton" parent="TabContainer/Graphics/GridContainer"]
margin_left = 622.0
margin_right = 1022.0
margin_bottom = 20.0
rect_min_size = Vector2( 400, 0 )
text = "FullScreen"
items = [ "FullScreen", null, false, 0, null, "Windowed", null, false, 1, null ]
selected = 0

[node name="Vsync" type="Label" parent="TabContainer/Graphics/GridContainer"]
margin_top = 37.0
margin_right = 83.0
margin_bottom = 51.0
text = "Vsync"

[node name="CheckVsync" type="CheckButton" parent="TabContainer/Graphics/GridContainer"]
margin_left = 622.0
margin_top = 24.0
margin_right = 1022.0
margin_bottom = 64.0
pressed = true

[node name="DisplayFps" type="Label" parent="TabContainer/Graphics/GridContainer"]
margin_top = 81.0
margin_right = 83.0
margin_bottom = 95.0
text = "Display FPS"

[node name="CheckDisplayFps" type="CheckButton" parent="TabContainer/Graphics/GridContainer"]
margin_left = 622.0
margin_top = 68.0
margin_right = 1022.0
margin_bottom = 108.0

[node name="Audio" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Audio"]
margin_right = 77.0
margin_bottom = 605.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Audio"]
anchor_top = 0.0246305
anchor_right = 1.0
anchor_bottom = 1.02463
margin_left = 97.0
margin_top = 18.0
margin_right = -78.0
margin_bottom = -66.0
custom_constants/hseparation = 539
columns = 2

[node name="MasterVolum" type="Label" parent="TabContainer/Audio/GridContainer"]
margin_top = 1.0
margin_right = 89.0
margin_bottom = 15.0
text = "Master Volum"

[node name="MasterVolumSlider" type="HSlider" parent="TabContainer/Audio/GridContainer"]
margin_left = 628.0
margin_right = 928.0
margin_bottom = 16.0
rect_min_size = Vector2( 300, 0 )
min_value = -72.0
max_value = 0.0

[node name="MarginContainer2" type="MarginContainer" parent="TabContainer/Audio"]
margin_left = 1061.0
margin_top = -8.0
margin_right = 1138.0
margin_bottom = 608.0

[node name="Controls" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Controls"]
margin_right = 77.0
margin_bottom = 605.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Controls"]
anchor_top = 0.0246305
anchor_right = 1.0
anchor_bottom = 1.02463
margin_left = 97.0
margin_top = 18.0
margin_right = -78.0
margin_bottom = -66.0
custom_constants/hseparation = 539
columns = 2

[node name="Sensibilitat" type="Label" parent="TabContainer/Controls/GridContainer"]
margin_top = 1.0
margin_right = 71.0
margin_bottom = 15.0
text = "Sensibilitat"

[node name="SensibilitySlider" type="HSlider" parent="TabContainer/Controls/GridContainer"]
margin_left = 610.0
margin_right = 910.0
margin_bottom = 16.0
rect_min_size = Vector2( 300, 0 )
min_value = 50.0
max_value = 150.0
value = 50.0

[node name="MarginContainer2" type="MarginContainer" parent="TabContainer/Controls"]
margin_left = 1061.0
margin_top = -8.0
margin_right = 1138.0
margin_bottom = 608.0

[node name="Atrás" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 562.0
margin_right = -1018.0
margin_bottom = -28.0
text = "Atrás"

[node name="FpsNode" type="Node" parent="."]

[node name="FPS" type="Label" parent="FpsNode"]
visible = false
margin_right = 92.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "FPS"
align = 1

[connection signal="toggled" from="TabContainer/Graphics/GridContainer/CheckVsync" to="." method="_on_CheckVsync_toggled"]
[connection signal="toggled" from="TabContainer/Graphics/GridContainer/CheckDisplayFps" to="." method="_on_CheckDisplayFps_toggled"]
[connection signal="value_changed" from="TabContainer/Audio/GridContainer/MasterVolumSlider" to="." method="_on_MasterVolumSlider_value_changed"]
[connection signal="value_changed" from="TabContainer/Controls/GridContainer/SensibilitySlider" to="." method="_on_SensibilitySlider_value_changed"]
[connection signal="pressed" from="Atrás" to="." method="_on_Atrs_pressed"]
